# CSCN73060-Group4-P6

./: .gitignore  CSCN73060-Group4-P6.sln  README.md  docker-compose.yml  results.txt
.github/workflows/: BuildAndTest.yml  CODEOWNERS
TechnicalReport/: TechnicalReport.tex  references.bib
UserInterface/: client.py  main.py  requirements.txt
WebServer_P1/: BuildCommands.txt  CMakeLists.txt  Dockerfile  HTTP Request_GET.jmx  WebServer_P1.vcxproj  build.sh  libraryapi_TestPlan.jmx  results.txt
WebServer_P1/include/routes/: routes.h
WebServer_P1/include/utils/: db_utils.h  json_utils.h
WebServer_P1/src/: main.cpp
WebServer_P1/src/routes/: routes.cpp  routes.h
WebServer_P1/src/utils/: db_utils.cpp  json_utils.cpp
